--- a/TeleBruzzano.html
+++ b/TeleBruzzano.html
@@ -1,1 +1,4 @@
-<center><iframe scrolling="no" width="899" height="720" src="https://playerssl.telemia.tv/FramePlayer.php?id=Telebruzzano&amp;s=telebruzzano_mediachunks&amp;autoplay=true&amp;muted=false&amp;banner=https://hosted.telemia.tv/telebruzzano/img/logotelebruzzano_black.jpg" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+<center><iframe scrolling="no" width="899" height="470" src="https://playerssl.telemia.tv/FramePlayer.php?id=Telebruzzano&amp;s=telebruzzano_mediachunks&amp;autoplay=true&amp;muted=false&amp;banner=https://hosted.telemia.tv/telebruzzano/img/logotelebruzzano_black.jpg" frameborder="0" allowfullscreen="allowfullscreen"></iframe></center>
+<center>
+    <a href="https://play.google.com/store/apps/details?id=appinventor.ai_mauriziocinnirella.TELEBRUZZANO&amp;hl=it" rel="noopener" target="_blank" title="Download now"><img alt="Google Play Store" id="st-ov-playstore-button" src="https://i.postimg.cc/HsPH7bWz/Play-Store.png" width="302" name="st-ov-playstore-button"></a>
+</center>
