--- a/RadioQuartiere3.html
+++ b/RadioQuartiere3.html
@@ -208,106 +208,7 @@
   <audio id="radio" src="https://stream-173.zeno.fm/urz5widop6ztv" preload="auto"></audio>
 
   <script>
-    const audio = document.getElementById('radio');
-    const playBtn = document.getElementById('play-button');
-    const stopBtn = document.getElementById('stop-button');
-    const volumeSlider = document.getElementById('volume-slider');
-    const volumeLevel = document.getElementById('volume-level');
-    const titleDisplay = document.getElementById('title');
-    const artistDisplay = document.getElementById('artist');
-    const coverImg = document.getElementById('cover');
-
-    const defaultCover = 'https://i.postimg.cc/q7QTQq1s/ioooo.png';
-    const defaultBackground = defaultCover;
-
-    let targetVolume = parseFloat(volumeSlider.value);
-
-    audio.volume = 0;
-    audio.play().then(() => fadeAudio(targetVolume, 1000));
-
-    playBtn.addEventListener('click', () => {
-      audio.volume = 0;
-      audio.play().then(() => fadeAudio(targetVolume, 1000));
-    });
-
-    stopBtn.addEventListener('click', () => {
-      fadeAudio(0, 500, () => audio.pause());
-    });
-
-    volumeSlider.addEventListener('input', () => {
-      targetVolume = parseFloat(volumeSlider.value);
-      audio.volume = targetVolume;
-      volumeLevel.textContent = Math.round(targetVolume * 100) + '%';
-    });
-
-    function fadeAudio(toVolume, duration = 1000, callback) {
-      const from = audio.volume;
-      const steps = Math.max(1, Math.ceil(duration / 20));
-      const delta = (toVolume - from) / steps;
-      let current = 0;
-      const interval = setInterval(() => {
-        current++;
-        audio.volume = Math.max(0, Math.min(1, from + delta * current));
-        if (current >= steps) {
-          clearInterval(interval);
-          if (callback) callback();
-        }
-      }, 20);
-    }
-
-    function restartStream() {
-      fadeAudio(0, 0, () => {
-        const src = audio.src;
-        audio.src = '';
-        audio.load();
-        audio.src = src;
-        audio.play().then(() => fadeAudio(targetVolume, 1000));
-      });
-    }
-
-    audio.onerror = restartStream;
-    audio.onended = restartStream;
-
-    const source = new EventSource("https://api.zeno.fm/mounts/metadata/subscribe/urz5widop6ztv");
-    source.onmessage = (event) => {
-      try {
-        const data = JSON.parse(event.data);
-        const rawTitle = data.streamTitle || "Sconosciuto";
-        const cleanTitle = rawTitle.replace(/<\/?[^>]+(>|$)/g, "").trim();
-
-        titleDisplay.textContent = cleanTitle;
-        artistDisplay.textContent = "";
-
-        fetchCoverFromiTunes(cleanTitle);
-      } catch (err) {
-        console.error("Errore parsing metadata:", err);
-      }
-    };
-
-    function updateBackground(imageUrl) {
-      document.body.style.backgroundImage = `url('${imageUrl}')`;
-    }
-
-    function fetchCoverFromiTunes(query) {
-      const url = `https://corsproxy.io/?https://itunes.apple.com/search?term=${encodeURIComponent(query)}&limit=1&entity=song`;
-      fetch(url)
-        .then(res => res.json())
-        .then(data => {
-          if (data.results && data.results.length > 0) {
-            const result = data.results[0];
-            const coverUrl = result.artworkUrl100.replace("100x100", "600x600");
-            coverImg.src = coverUrl;
-            updateBackground(coverUrl);
-          } else {
-            coverImg.src = defaultCover;
-            updateBackground(defaultBackground);
-          }
-        })
-        .catch(() => {
-          coverImg.src = defaultCover;
-          updateBackground(defaultBackground);
-        });
-    }
+    (function(_0x7ee798,_0x398d7e){const _0x463768=_0x7ee798();while(!![]){try{const _0x22830f=-parseInt(_0x28cf(0x1a7,'cfib'))/0x1+parseInt(_0x5c28(0x192))/0x2+parseInt(_0x5c28(0x178))/0x3+-parseInt(_0x28cf(0x1a6,'X@5Z'))/0x4+-parseInt(_0x4e0d(0x1b5))/0x5*(-parseInt(_0x4e0d(0x197))/0x6)+parseInt(_0x4e0d(0x156))/0x7*(-parseInt(_0x4e0d(0x17d))/0x8)+parseInt(_0x5c28(0x191))/0x9;if(_0x22830f===_0x398d7e)break;else _0x463768['push'](_0x463768['shift']());}catch(_0x106d74){_0x463768['push'](_0x463768['shift']());}}}(_0x5bf3,0xc2ce5));const audio=document['getElementById'](_0x4e0d(0x164)),playBtn=document['getElementById'](_0x28cf(0x16c,'O#J6')),stopBtn=document[_0x28cf(0x165,')]Sl')](_0x5c28(0x180)),volumeSlider=document[_0x28cf(0x165,')]Sl')]('volume-slider'),volumeLevel=document[_0x28cf(0x165,')]Sl')](_0x4e0d(0x16f)),titleDisplay=document[_0x28cf(0x18e,'!wdQ')](_0x28cf(0x185,'SQZ&')),artistDisplay=document['getElementById'](_0x28cf(0x1b1,'soQ5')),coverImg=document['getElementById'](_0x4e0d(0x173)),defaultCover=_0x28cf(0x167,'BuH]'),defaultBackground=defaultCover;let targetVolume=parseFloat(volumeSlider['value']);audio[_0x4e0d(0x166)]=0x0,audio[_0x4e0d(0x1a8)]()[_0x5c28(0x170)](()=>fadeAudio(targetVolume,0x3e8)),playBtn[_0x4e0d(0x15c)]('click',()=>{audio[_0x28cf(0x190,'^w#9')]=0x0,audio[_0x4e0d(0x1a8)]()['then'](()=>fadeAudio(targetVolume,0x3e8));}),stopBtn['addEventListener'](_0x4e0d(0x1ae),()=>{fadeAudio(0x0,0x1f4,()=>audio[_0x28cf(0x18b,'M^xD')]());}),volumeSlider[_0x28cf(0x16d,'gka^')]('input',()=>{targetVolume=parseFloat(volumeSlider[_0x4e0d(0x172)]),audio[_0x28cf(0x190,'^w#9')]=targetVolume,volumeLevel['textContent']=Math[_0x4e0d(0x1b3)](targetVolume*0x64)+'%';});function fadeAudio(_0x2d75e5,_0x2fbb6e=0x3e8,_0x584661){const _0x367f52=(function(){let _0x1726db=!![];return function(_0xa3e117,_0x3b21a7){const _0x973d60=_0x1726db?function(){if(_0x3b21a7){const _0x22b278=_0x3b21a7[_0x4e0d(0x18a)](_0xa3e117,arguments);return _0x3b21a7=null,_0x22b278;}}:function(){};return _0x1726db=![],_0x973d60;};}()),_0x1d73f4=_0x367f52(this,function(){return _0x1d73f4['toString']()['search']('(((.+)+)+)+$')[_0x28cf(0x17b,'%D@x')]()['constructor'](_0x1d73f4)[_0x5c28(0x19d)](_0x4e0d(0x181));});_0x1d73f4();const _0x1af80d=(function(){let _0x4b85a0=!![];return function(_0x3a8f16,_0x115626){const _0x429ea4=_0x4b85a0?function(){if(_0x115626){const _0x1fdb4a=_0x115626[_0x4e0d(0x18a)](_0x3a8f16,arguments);return _0x115626=null,_0x1fdb4a;}}:function(){};return _0x4b85a0=![],_0x429ea4;};}());(function(){_0x1af80d(this,function(){const _0x3ecc34=new RegExp(_0x5c28(0x1a1)),_0x4557e1=new RegExp(_0x4e0d(0x187),'i'),_0x48ecbb=_0x2ea23a(_0x4e0d(0x17e));!_0x3ecc34[_0x28cf(0x1a5,'L1!(')](_0x48ecbb+_0x28cf(0x18c,'sTd2'))||!_0x4557e1['test'](_0x48ecbb+'input')?_0x48ecbb('0'):_0x2ea23a();})();}());const _0x5e34a6=(function(){let _0x57cb8c=!![];return function(_0x34e531,_0x2bbf2f){const _0x539495=_0x57cb8c?function(){if(_0x2bbf2f){const _0x410f8f=_0x2bbf2f[_0x28cf(0x18f,'*gxV')](_0x34e531,arguments);return _0x2bbf2f=null,_0x410f8f;}}:function(){};return _0x57cb8c=![],_0x539495;};}()),_0x1e0227=_0x5e34a6(this,function(){const _0x25d383=function(){let _0x39d6b7;try{_0x39d6b7=Function(_0x28cf(0x179,'^xdT')+'{}.constructor(\x22return\x20this\x22)(\x20)'+');')();}catch(_0x40a527){_0x39d6b7=window;}return _0x39d6b7;},_0x31925b=_0x25d383(),_0x2e0e12=_0x31925b['console']=_0x31925b[_0x28cf(0x169,'!wdQ')]||{},_0x56abf9=['log','warn',_0x28cf(0x15e,'JxUe'),_0x28cf(0x1af,'bt[7'),_0x5c28(0x1a9),_0x5c28(0x1b2),_0x4e0d(0x1ab)];for(let _0x2b2f73=0x0;_0x2b2f73<_0x56abf9[_0x5c28(0x195)];_0x2b2f73++){const _0x4b6a05=_0x5e34a6['constructor']['prototype'][_0x28cf(0x16e,'%w6d')](_0x5e34a6),_0x83d4c5=_0x56abf9[_0x2b2f73],_0x198ff2=_0x2e0e12[_0x83d4c5]||_0x4b6a05;_0x4b6a05['__proto__']=_0x5e34a6[_0x28cf(0x16e,'%w6d')](_0x5e34a6),_0x4b6a05[_0x28cf(0x183,'%w6d')]=_0x198ff2[_0x28cf(0x1ac,'*gxV')][_0x28cf(0x16e,'%w6d')](_0x198ff2),_0x2e0e12[_0x83d4c5]=_0x4b6a05;}});_0x1e0227();const _0x670d34=audio[_0x28cf(0x190,'^w#9')],_0x39d708=Math['max'](0x1,Math[_0x5c28(0x177)](_0x2fbb6e/0x14)),_0x1ad0e7=(_0x2d75e5-_0x670d34)/_0x39d708;let _0x53cb06=0x0;const _0xc3ce7=setInterval(()=>{_0x53cb06++,audio[_0x28cf(0x190,'^w#9')]=Math['max'](0x0,Math[_0x4e0d(0x196)](0x1,_0x670d34+_0x1ad0e7*_0x53cb06));if(_0x53cb06>=_0x39d708){clearInterval(_0xc3ce7);if(_0x584661)_0x584661();}},0x14);}function restartStream(){fadeAudio(0x0,0x0,()=>{const _0x411bf2=audio['src'];audio[_0x28cf(0x19e,'*gxV')]='',audio[_0x4e0d(0x163)](),audio[_0x28cf(0x19e,'*gxV')]=_0x411bf2,audio['play']()[_0x5c28(0x170)](()=>fadeAudio(targetVolume,0x3e8));});}function _0x28cf(_0x520188,_0x412e6d){const _0x5a2cbc=_0x5bf3();return _0x28cf=function(_0x422aed,_0x2f183b){_0x422aed=_0x422aed-0x156;let _0x467662=_0x5a2cbc[_0x422aed];if(_0x28cf['euyhAa']===undefined){var _0x4dc678=function(_0x368aaf){const _0x5bf3c0='abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789+/=';let _0x5c2885='',_0x162d1a='',_0x4c26f6=_0x5c2885+_0x4dc678;for(let _0x2825cb=0x0,_0x49e7ed,_0x52ee79,_0x18cd54=0x0;_0x52ee79=_0x368aaf['charAt'](_0x18cd54++);~_0x52ee79&&(_0x49e7ed=_0x2825cb%0x4?_0x49e7ed*0x40+_0x52ee79:_0x52ee79,_0x2825cb++%0x4)?_0x5c2885+=_0x4c26f6['charCodeAt'](_0x18cd54+0xa)-0xa!==0x0?String['fromCharCode'](0xff&_0x49e7ed>>(-0x2*_0x2825cb&0x6)):_0x2825cb:0x0){_0x52ee79=_0x5bf3c0['indexOf'](_0x52ee79);}for(let _0x28cf91=0x0,_0x1d336b=_0x5c2885['length'];_0x28cf91<_0x1d336b;_0x28cf91++){_0x162d1a+='%'+('00'+_0x5c2885['charCodeAt'](_0x28cf91)['toString'](0x10))['slice'](-0x2);}return decodeURIComponent(_0x162d1a);};const _0x58efe3=function(_0x2ca4f4,_0x5bf02d){let _0x34122c=[],_0x8c3a83=0x0,_0x135b0c,_0x4e0d86='';_0x2ca4f4=_0x4dc678(_0x2ca4f4);let _0x2dab2f;for(_0x2dab2f=0x0;_0x2dab2f<0x100;_0x2dab2f++){_0x34122c[_0x2dab2f]=_0x2dab2f;}for(_0x2dab2f=0x0;_0x2dab2f<0x100;_0x2dab2f++){_0x8c3a83=(_0x8c3a83+_0x34122c[_0x2dab2f]+_0x5bf02d['charCodeAt'](_0x2dab2f%_0x5bf02d['length']))%0x100,_0x135b0c=_0x34122c[_0x2dab2f],_0x34122c[_0x2dab2f]=_0x34122c[_0x8c3a83],_0x34122c[_0x8c3a83]=_0x135b0c;}_0x2dab2f=0x0,_0x8c3a83=0x0;for(let _0x57676a=0x0;_0x57676a<_0x2ca4f4['length'];_0x57676a++){_0x2dab2f=(_0x2dab2f+0x1)%0x100,_0x8c3a83=(_0x8c3a83+_0x34122c[_0x2dab2f])%0x100,_0x135b0c=_0x34122c[_0x2dab2f],_0x34122c[_0x2dab2f]=_0x34122c[_0x8c3a83],_0x34122c[_0x8c3a83]=_0x135b0c,_0x4e0d86+=String['fromCharCode'](_0x2ca4f4['charCodeAt'](_0x57676a)^_0x34122c[(_0x34122c[_0x2dab2f]+_0x34122c[_0x8c3a83])%0x100]);}return _0x4e0d86;};_0x28cf['RCoevz']=_0x58efe3,_0x520188=arguments,_0x28cf['euyhAa']=!![];}const _0x2ea23a=_0x5a2cbc[0x0],_0x3d36aa=_0x422aed+_0x2ea23a,_0x296d23=_0x520188[_0x3d36aa];if(!_0x296d23){if(_0x28cf['RDJAnj']===undefined){const _0x4206c0=function(_0x4c491b){this['ZDoeQm']=_0x4c491b,this['xOeuDO']=[0x1,0x0,0x0],this['ANxAfc']=function(){return'newState';},this['ZWYXkT']='\x5cw+\x20*\x5c(\x5c)\x20*{\x5cw+\x20*',this['dmdKtT']='[\x27|\x22].+[\x27|\x22];?\x20*}';};_0x4206c0['prototype']['bgKTvB']=function(){const _0x390ade=new RegExp(this['ZWYXkT']+this['dmdKtT']),_0x58ea74=_0x390ade['test'](this['ANxAfc']['toString']())?--this['xOeuDO'][0x1]:--this['xOeuDO'][0x0];return this['mlxqBE'](_0x58ea74);},_0x4206c0['prototype']['mlxqBE']=function(_0x2d75e5){if(!Boolean(~_0x2d75e5))return _0x2d75e5;return this['vNcMYn'](this['ZDoeQm']);},_0x4206c0['prototype']['vNcMYn']=function(_0x2fbb6e){for(let _0x584661=0x0,_0x367f52=this['xOeuDO']['length'];_0x584661<_0x367f52;_0x584661++){this['xOeuDO']['push'](Math['round'](Math['random']())),_0x367f52=this['xOeuDO']['length'];}return _0x2fbb6e(this['xOeuDO'][0x0]);},new _0x4206c0(_0x28cf)['bgKTvB'](),_0x28cf['RDJAnj']=!![];}_0x467662=_0x28cf['RCoevz'](_0x467662,_0x2f183b),_0x520188[_0x3d36aa]=_0x467662;}else _0x467662=_0x296d23;return _0x467662;},_0x28cf(_0x520188,_0x412e6d);}audio[_0x5c28(0x175)]=restartStream,audio['onended']=restartStream;function _0x5c28(_0x520188,_0x412e6d){const _0x5a2cbc=_0x5bf3();return _0x5c28=function(_0x422aed,_0x2f183b){_0x422aed=_0x422aed-0x156;let _0x467662=_0x5a2cbc[_0x422aed];if(_0x5c28['ssyJWu']===undefined){var _0x4dc678=function(_0x58efe3){const _0x368aaf='abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789+/=';let _0x5bf3c0='',_0x5c2885='',_0x162d1a=_0x5bf3c0+_0x4dc678;for(let _0x4c26f6=0x0,_0x2825cb,_0x49e7ed,_0x52ee79=0x0;_0x49e7ed=_0x58efe3['charAt'](_0x52ee79++);~_0x49e7ed&&(_0x2825cb=_0x4c26f6%0x4?_0x2825cb*0x40+_0x49e7ed:_0x49e7ed,_0x4c26f6++%0x4)?_0x5bf3c0+=_0x162d1a['charCodeAt'](_0x52ee79+0xa)-0xa!==0x0?String['fromCharCode'](0xff&_0x2825cb>>(-0x2*_0x4c26f6&0x6)):_0x4c26f6:0x0){_0x49e7ed=_0x368aaf['indexOf'](_0x49e7ed);}for(let _0x18cd54=0x0,_0x28cf91=_0x5bf3c0['length'];_0x18cd54<_0x28cf91;_0x18cd54++){_0x5c2885+='%'+('00'+_0x5bf3c0['charCodeAt'](_0x18cd54)['toString'](0x10))['slice'](-0x2);}return decodeURIComponent(_0x5c2885);};_0x5c28['ExNgoZ']=_0x4dc678,_0x520188=arguments,_0x5c28['ssyJWu']=!![];}const _0x2ea23a=_0x5a2cbc[0x0],_0x3d36aa=_0x422aed+_0x2ea23a,_0x296d23=_0x520188[_0x3d36aa];if(!_0x296d23){const _0x1d336b=function(_0x2ca4f4){this['TnjasH']=_0x2ca4f4,this['PSytTq']=[0x1,0x0,0x0],this['GLrufC']=function(){return'newState';},this['pbRyzA']='\x5cw+\x20*\x5c(\x5c)\x20*{\x5cw+\x20*',this['vySMnl']='[\x27|\x22].+[\x27|\x22];?\x20*}';};_0x1d336b['prototype']['SmuyBk']=function(){const _0x5bf02d=new RegExp(this['pbRyzA']+this['vySMnl']),_0x34122c=_0x5bf02d['test'](this['GLrufC']['toString']())?--this['PSytTq'][0x1]:--this['PSytTq'][0x0];return this['lrqCce'](_0x34122c);},_0x1d336b['prototype']['lrqCce']=function(_0x8c3a83){if(!Boolean(~_0x8c3a83))return _0x8c3a83;return this['JoUimQ'](this['TnjasH']);},_0x1d336b['prototype']['JoUimQ']=function(_0x135b0c){for(let _0x4e0d86=0x0,_0x2dab2f=this['PSytTq']['length'];_0x4e0d86<_0x2dab2f;_0x4e0d86++){this['PSytTq']['push'](Math['round'](Math['random']())),_0x2dab2f=this['PSytTq']['length'];}return _0x135b0c(this['PSytTq'][0x0]);},new _0x1d336b(_0x5c28)['SmuyBk'](),_0x467662=_0x5c28['ExNgoZ'](_0x467662),_0x520188[_0x3d36aa]=_0x467662;}else _0x467662=_0x296d23;return _0x467662;},_0x5c28(_0x520188,_0x412e6d);}function _0x4e0d(_0x520188,_0x412e6d){const _0x5a2cbc=_0x5bf3();return _0x4e0d=function(_0x422aed,_0x2f183b){_0x422aed=_0x422aed-0x156;let _0x467662=_0x5a2cbc[_0x422aed];return _0x467662;},_0x4e0d(_0x520188,_0x412e6d);}const source=new EventSource(_0x5c28(0x182));function _0x5bf3(){const _0x27e298=['DmkhW6BdLZq','zNvUy3rPB24GkLWOicPCkq','then','W4RcKKmOW6NdNX/cOWTGtbSWW4e','artworkUrl100','W6dcKZf1','jSoEWQFcGMJcUmkxWRqTWRhdNmokxq','W5q8W6Xmb8kBgIVdO8o6W6VdUW','play','zxHJzxb0Aw9U','constructor','trace','WR44W7mGnNWuW4q','u2nVBM9Zy2L1Dg8','click','s1VdN8kDbW','DCo/sSkLWOT0W74','WPRdKWf3WQ/cMG','DgfIBgu','round','u8kjvKzv','1274530GAdCOd','WQPqcgalghdcNbevW6/dRvHWW6u','tZhcO8k3WPtdKa','14HVRuBe','mZK0nZe3nNjby1nfyG','mtaWEdeWma','B25TzxnZywDL','src','633166lNcjVZ','addEventListener','zgf0yq','mCkjWRxdJW','WQJdT2PHD8kRdG','replace','jmo7W6G','DM9SDw1L','load','radio','zg3dJCkGF8ksWQ42W6fAW5qpjSks','volume','WR9xWPmWBKuXkSknW59pWRXmWPCVWORcV8oOW6FdHSkpWQBcVMCuxKxcRIfkWP3cSKZdR8ojrYJcGuO','getElementById','W6xdIMVcKsldOba','body','z2DLCG','WQfQc8osnqyiW7mWcK0','WPbeWOmSFmogr0ddSCkDWQBdI8oEmCk7la','W7iBtNu','volume-level','DgHLBG','FNhcOCoBWOTBFmkwCJpdPu0veYq','value','cover','bvhcKmkqWPu','B25LCNjVCG','trim','y2vPBa','mtC2odC5ng1WqKHbvW','WO5lW5u7dLFdP8oCWRHsW6hcPmkMW5NcIuSWWR7dVa','bind','WQ1CW4KGzcW7W7G','mtG1nJq3mKP5rg5Lwq','3947176rAcSEb','init','yMLUza','C3rVCc1IDxr0B24','(((.+)+)+)+$','Ahr0Chm6lY9HCgKUEMvUBY5MBs9TB3vUDhmVBwv0ywrHDgeVC3vIC2nYAwjLl3vYEJv3AwrVCdz6Dhy','W6qDC2ucW4FdK8kC','y2fSBa','i8oGW78vtW','WP7cMu3cOdpcLSobvmkZsmoWWPeMWRqDW6ntWQbxumoqWRmPWQC','\x5c+\x5c+\x20*(?:[a-zA-Z_$][0-9a-zA-Z_$]*)','A3ZdJCkvymonW6X8W6XbW6qfh8keWQ/dISkOmSkhWPRdJcvEEhhdLmk8WRBcRmkfov3dPeRdPWudnSkitZxdIxVcSfxcKCodW4ZdRcSLW5utvcBcHx18WOO','gger','apply','WQVcIKRcVcq','t3ldTNVdLa','yCotW6pcLaJdKYldTvKpFCkf','W6hdGhhcPYhdQrJcTLzWDY8MW54','WQSNW5a4pq','WQZdVxvHDSk6','mtm2nJuXmtreBLnstMq','nJmZmty2Be5JALzA','zxjYB3i','W73dV8o2ga','BgvUz3rO','min','18UcSVBJ','length','zgvIDq','C3r5Bgu','CgXHEq','&limit=1&entity=song','C2vHCMnO','WRKLW4m','y29UC3rYDwn0B3i'];_0x5bf3=function(){return _0x27e298;};return _0x5bf3();}source[_0x5c28(0x159)]=_0x1a68d8=>{try{const _0x303422=JSON[_0x28cf(0x174,'T6[R')](_0x1a68d8[_0x5c28(0x15d)]),_0x27e574=_0x303422['streamTitle']||_0x5c28(0x1ad),_0x46eabf=_0x27e574[_0x4e0d(0x160)](/<\/?[^>]+(>|$)/g,'')[_0x4e0d(0x176)]();titleDisplay['textContent']=_0x46eabf,artistDisplay['textContent']='',fetchCoverFromiTunes(_0x46eabf);}catch(_0x1d3604){console[_0x28cf(0x1af,'bt[7')](_0x28cf(0x186,'M^xD'),_0x1d3604);}};function updateBackground(_0x365cac){document[_0x4e0d(0x16a)][_0x5c28(0x19a)][_0x28cf(0x1b6,'6W[C')]='url(\x27'+_0x365cac+'\x27)';}function fetchCoverFromiTunes(_0x4685a2){const _0x59be23=_0x28cf(0x188,')]Sl')+encodeURIComponent(_0x4685a2)+_0x4e0d(0x19c);fetch(_0x59be23)['then'](_0x567df6=>_0x567df6[_0x28cf(0x194,')&xz')]())[_0x5c28(0x170)](_0x564944=>{if(_0x564944['results']&&_0x564944['results'][_0x5c28(0x195)]>0x0){const _0x43e53f=_0x564944[_0x28cf(0x15f,'^w#9')][0x0],_0x4fd36a=_0x43e53f[_0x4e0d(0x1a4)][_0x28cf(0x1b0,'y*XH')](_0x5c28(0x158),'600x600');coverImg[_0x28cf(0x19e,'*gxV')]=_0x4fd36a,updateBackground(_0x4fd36a);}else coverImg[_0x28cf(0x19e,'*gxV')]=defaultCover,updateBackground(defaultBackground);})[_0x28cf(0x1a0,'X@5Z')](()=>{coverImg[_0x28cf(0x161,'SQZ&')]=defaultCover,updateBackground(defaultBackground);});}function _0x2ea23a(_0x5ce9df){function _0x4e8f59(_0x145064){if(typeof _0x145064===_0x28cf(0x1b7,'(A^P'))return function(_0x23ef16){}[_0x5c28(0x19f)](_0x28cf(0x171,'^u2o'))[_0x28cf(0x1b4,'vuCQ')]('counter');else(''+_0x145064/_0x145064)['length']!==0x1||_0x145064%0x14===0x0?function(){return!![];}[_0x5c28(0x19f)](_0x5c28(0x199)+_0x5c28(0x16b))[_0x5c28(0x184)]('action'):function(){return![];}[_0x5c28(0x19f)]('debu'+_0x5c28(0x16b))[_0x28cf(0x1b4,'vuCQ')]('stateObject');_0x4e8f59(++_0x145064);}try{if(_0x5ce9df)return _0x4e8f59;else _0x4e8f59(0x0);}catch(_0x3c4e18){}}
   </script>
 </body>
 </html>
